# kde-contextmenu

./: CMakeLists.txt  HOWTO  README  kde-contextmenu.desktop  launch.cpp  launch.h  plasma-containmentactions-favorites.desktop  setup.sh
